03/27/2003 Bob Rossi <bob_rossi@cox.net>

    * Adding an initial list of key alt and alt-shift key bindings
    * Commenting out most alt, shift-alt key bindings: These new key bindings 
    are breaking the input library. They are getting confused with other
    longer key mappings that have the alt-key mappings as a subset.

03/26/2003 Bob Rossi <bob_rossi@cox.net>

    * Adding the Alt-A through Alt-Z key bindings

03/25/2003 Bob Rossi <bob_rossi@cox.net>

    * Adding the input interface for the first time: This should help cgdb
    read input esc sequences and still perform functions at a high level.